fix margin overflow in page-body template

--- a/css/page-body.css
+++ b/css/page-body.css
@@ -7,7 +7,8 @@
 .page-body .page-logo {
   width: 75px;
   display: block;
-  margin: 10px auto;
+  margin: 0px auto;
+  padding: 10px 0;
 }
 .page-body header {
   position: sticky;
